err/bcdaqwidgets.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BcdaQWidgets-2017.3.0.dist-info'...
Listing './lib/python3.5/site-packages/bcdaqwidgets'...
Compiling './lib/python3.5/site-packages/bcdaqwidgets/bcdaqwidgets.py'...
***   File "./lib/python3.5/site-packages/bcdaqwidgets/bcdaqwidgets.py", line 221
    print self.pv.severity
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bcdaqwidgets/pvview.py'...
***   File "./lib/python3.5/site-packages/bcdaqwidgets/pvview.py", line 54
    raise RuntimeError, "Must specify one or more EPICS PVs on command line"
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bcdaqwidgets_demos'...
Listing './lib/python3.5/site-packages/epics'...
Listing './lib/python3.5/site-packages/epics/autosave'...
Listing './lib/python3.5/site-packages/epics/clibs'...
Listing './lib/python3.5/site-packages/epics/clibs/darwin64'...
Listing './lib/python3.5/site-packages/epics/clibs/linux32'...
Listing './lib/python3.5/site-packages/epics/clibs/linux64'...
Listing './lib/python3.5/site-packages/epics/clibs/win32'...
Listing './lib/python3.5/site-packages/epics/clibs/win64'...
Listing './lib/python3.5/site-packages/epics/compat'...
Listing './lib/python3.5/site-packages/epics/devices'...
Listing './lib/python3.5/site-packages/epics/wx'...
Listing './lib/python3.5/site-packages/motorqt_demo'...
Compiling './lib/python3.5/site-packages/motorqt_demo/listpanel.py'...
***   File "./lib/python3.5/site-packages/motorqt_demo/listpanel.py", line 58
    raise RuntimeError, "must call addMotorPV() with PV name string!"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motorqt_demo/motor_qt.py'...
***   File "./lib/python3.5/site-packages/motorqt_demo/motor_qt.py", line 214
    raise RuntimeError, "lbl_name must not be 'None'"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motorqt_demo/multimotor.py'...
***   File "./lib/python3.5/site-packages/motorqt_demo/multimotor.py", line 61
    raise RuntimeError, "usage %s motor [motor ...]" % sys.argv[0]
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motorqt_demo/new_motor_qt.py'...
***   File "./lib/python3.5/site-packages/motorqt_demo/new_motor_qt.py", line 214
    raise RuntimeError, "lbl_name must not be 'None'"
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyepics-3.3.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
